compiler/fir/resolve/testData/resolve/problems/ambiguityOnExtensionFunctions.kt
interface A

interface B : A

val A.name: String?
    get() = ""

val B?.name: String?
    get() = ""

fun test(b: B) {
    val id = b.<!AMBIGUITY!>name<!>
}
